# exstatsd

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  pyproject.toml  requirements-test.txt  requirements.txt
.github/actions/test/: action.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: conf.py
statsd/: __init__.py  tests.py
statsd/client/: base.py  stream.py  timer.py  udp.py
statsd/defaults/: __init__.py  django.py  env.py
